--- a/index.html
+++ b/index.html
@@ -68,18 +68,22 @@
             <td>Scroll滑動時導覽列變化</td>
             <td></td>
             <td>1. JS有滾動觸發機制<br>
-                2. GSAP也有 尚未開始測試
+                2. GSAP也有 未開始測試
             </td>
-            <td></td>
+            <td>
+                <a href="./4_ScrollTrigger/ScrollTrigger.html"></a>
+            </td>
         </tr>
         <tr>
             <td>5</td>
             <td>最新消息摩天輪能旋轉並內部放入<br>
                 最新消息</td>
-            <td>1. 有找到範例, 未測試<br>
+            <td>1. 有找到範例, 未開始測試<br>
             </td>
             <td></td>
-            <td></td>
+            <td>
+                <a href="https://codepen.io/jimbatamang/pen/MybjRK?__cf_chl_tk=unrYvT1PMYxixaf5jlW5siBdX5XBBnTtoom2o1dJ_Wc-1651976958-0-gaNycGzNCdE">Codepen範例</a>
+            </td>
         </tr>
         <tr>
             <td>6</td>
@@ -88,14 +92,24 @@
                 2. 飛機動畫不知原理如何
             </td>
             <td></td>
-            <td></td>
+            <td>
+                <a href="https://codepen.io/ste-vg/pen/GRooLza">
+                    Codepen範例
+                </a>
+            </td>
         </tr>
         <tr>
             <td>7</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>CANVAS小遊戲</td>
+            <td>接漢堡 射擊 養成</td>
+            <td>簡易接東西得分
+                射擊氣球得分
+                西部主題養成(農場之類的)
+            </td>
+            <td>
+                <a href="./7_CanvasGames/EagleChangeClothes/ChangeClothes.html">換衣服</a>
+                <a href="./7_CanvasGames/EagleCatchBurger/EagleCatchBurger.html">接漢堡</a>
+            </td>
         </tr>
         <tr>
             <td>8</td>
