--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
                 2. GSAP也有 未開始測試
             </td>
             <td>
-                <a href="./4_ScrollTrigger/ScrollTrigger.html"></a>
+                <a href="./4_ScrollTrigger/ScrollTrigger.html">
+                    手刻JS觸發</a>
+                <a href="">
+                    GSAP</a>
             </td>
         </tr>
         <tr>
