--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
         </tr>
         <tr>
             <td>4</td>
-            <td>Scroll滑動時導覽列變化</td>
+            <td>Scroll滑動時牛排蓋開蓋</td>
             <td></td>
             <td>1. JS有滾動觸發機制<br>
-                2. GSAP也有 未開始測試
+                2. GSAP可用 牛排蓋可用絕對定位蓋在照片上
             </td>
             <td>
                 <a href="./4_ScrollTrigger/ScrollTrigger.html">
                     手刻JS觸發</a>
-                <a href="">
+                <a href="./4_ScrollTrigger/ScollTirggerGSAP.html">
                     GSAP</a>
             </td>
         </tr>
@@ -83,7 +83,9 @@
                 最新消息</td>
             <td>1. 有找到範例, 未開始測試<br>
             </td>
-            <td></td>
+            <td>
+
+            </td>
             <td>
                 <a href="https://codepen.io/jimbatamang/pen/MybjRK?__cf_chl_tk=unrYvT1PMYxixaf5jlW5siBdX5XBBnTtoom2o1dJ_Wc-1651976958-0-gaNycGzNCdE">Codepen範例</a>
             </td>
@@ -94,10 +96,16 @@
             <td>1. 沿著軌道運行....<br>
                 2. 飛機動畫不知原理如何
             </td>
-            <td></td>
+            <td>
+                GSAP有套件可用，但滑軌路徑要吃SVG
+                麻煩就在如何讓滑軌路徑定位正確位置上
+            </td>
             <td>
                 <a href="https://codepen.io/ste-vg/pen/GRooLza">
                     Codepen範例
+                </a>
+                <a href="./6_MainPageRollerCoaster/6_MainPageRollerCoaster.html">
+                    GSAP MOTIONPATH
                 </a>
             </td>
         </tr>
