--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
             <td>歡迎頁動畫</td>
             <td>類似西部樂園　會有子彈彈孔　或是<br>
                 物件不斷移動特效</td>
-            <td></td>
-            <td></td>
+            <td>
+                單純背景無限循環動畫，可用CSS做<br>
+                用圖片搭配定位方式應可降低<br>
+                結構複雜度
+            </td>
+            <td>
+                <a href="./2_WelcomeAnimation/2_WelcomeAnimation.html">純CSS背景動畫</a>
+            </td>
         </tr>
         <tr>
             <td>3</td>
@@ -93,19 +99,20 @@
         <tr>
             <td>6</td>
             <td>BANNER軌道列車</td>
-            <td>1. 沿著軌道運行....<br>
+            <td>1. 沿著軌道運行<br>
                 2. 飛機動畫不知原理如何
             </td>
             <td>
-                GSAP有套件可用，但滑軌路徑要吃SVG
-                麻煩就在如何讓滑軌路徑定位正確位置上
+                GSAP有套件可用，但滑軌路徑要吃SVG<br>
+                接著問題就是如何控制SVG路徑大小能RWD<br>
+                並定位在正確位置上<br>
             </td>
             <td>
-                <a href="https://codepen.io/ste-vg/pen/GRooLza">
-                    Codepen範例
-                </a>
                 <a href="./6_MainPageRollerCoaster/6_MainPageRollerCoaster.html">
                     GSAP MOTIONPATH
+                </a><br>
+                <a href="https://codepen.io/ste-vg/pen/GRooLza">
+                    Codepen範例
                 </a>
             </td>
         </tr>
