--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
                 GSAP有套件可用，但滑軌路徑要吃SVG<br>
                 接著問題就是如何控制SVG路徑大小能RWD<br>
                 並定位在正確位置上<br>
+                另一個做法就用CSS做，座標就切幾個大點<br>
+                雖然列車滑行路徑會不太平滑
             </td>
             <td>
                 <a href="./6_MainPageRollerCoaster/6_MainPageRollerCoaster.html">
