--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 結構複雜度
             </td>
             <td>
-                <a href="./2_WelcomeAnimation/2_WelcomeAnimation.html">純CSS背景動畫</a>
+                <a href="https://codepen.io/gxash/pen/YqmxWg">Codepen範例</a>
+                <a href="./2_WelcomeAnimation/2_WelcomeAnimation.html">手刻純CSS背景動畫</a>
             </td>
         </tr>
         <tr>
