--- a/index.html
+++ b/index.html
@@ -44,8 +44,14 @@
             <td>首頁三大主圖樂園外框或示意圖外框<br>
                 具有線條或外框動畫(相關細節待補)
             </td>
-            <td></td>
-            <td></td>
+            <td>
+                CSS animation可直接套用在clip-path上<br>
+                若單純讓外框有蠕動效果是可行的
+            </td>
+            <td>
+                <a href="https://css-tricks.com/animating-with-clip-path/">ClipPath文章</a><br>
+                <a href="https://codepen.io/FUGU22/pen/dzLJJG">Codepen範例</a>
+            </td>
         </tr>
         <tr>
             <td>2</td>
@@ -55,11 +61,11 @@
             <td>
                 單純背景無限循環動畫，可用CSS做<br>
                 用圖片搭配定位方式應可降低<br>
-                結構複雜度
+                摳片範例是用SVG圖去做
             </td>
             <td>
-                <a href="https://codepen.io/gxash/pen/YqmxWg">Codepen範例</a>
-                <a href="./2_WelcomeAnimation/2_WelcomeAnimation.html">手刻純CSS背景動畫</a>
+                <a href="https://codepen.io/gxash/pen/YqmxWg">Codepen範例</a><br>
+                <a href="./2_WelcomeAnimation/2_WelcomeAnimation.html">手刻純CSS背景動畫</a><br>
             </td>
         </tr>
         <tr>
@@ -79,7 +85,7 @@
             </td>
             <td>
                 <a href="./4_ScrollTrigger/ScrollTrigger.html">
-                    手刻JS觸發</a>
+                    手刻JS觸發</a><br>
                 <a href="./4_ScrollTrigger/ScollTirggerGSAP.html">
                     GSAP</a>
             </td>
@@ -108,7 +114,9 @@
                 接著問題就是如何控制SVG路徑大小能RWD<br>
                 並定位在正確位置上<br>
                 另一個做法就用CSS做，座標就切幾個大點<br>
-                雖然列車滑行路徑會不太平滑
+                雖然列車滑行路徑會不太平滑<br>
+
+                要考慮3D　低配版有爛招（任天堂紅白機時代）<br>
             </td>
             <td>
                 <a href="./6_MainPageRollerCoaster/6_MainPageRollerCoaster.html">
@@ -128,7 +136,7 @@
                 西部主題養成(農場之類的)
             </td>
             <td>
-                <a href="./7_CanvasGames/EagleChangeClothes/ChangeClothes.html">換衣服</a>
+                <a href="./7_CanvasGames/EagleChangeClothes/ChangeClothes.html">換衣服</a><br>
                 <a href="./7_CanvasGames/EagleCatchBurger/EagleCatchBurger.html">接漢堡</a>
             </td>
         </tr>
