--- a/index.html
+++ b/index.html
@@ -142,10 +142,16 @@
         </tr>
         <tr>
             <td>8</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>背景圖小物件動態效果</td>
+            <td>背景圖 如FOOTER區域 有可動效果 增加視覺動態</td>
+            <td>(1)純CSS整片圖用刻的 優點是不易跑版 但缺點就工程浩大<br>
+                (2)另一個做法是背景靜態圖 要動態的部分獨立拉出來<br>
+                接著每個小物件獨立CSS動畫<br>
+                但定位點就要認真測試 工程量小但跑版風險很高<br>
+            </td>
+            <td>
+                <a href="https://ameiro-home.com/">首頁BANNER動態(2作法)</a>
+            </td>
         </tr>
         <tr>
             <td>9</td>
