--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                 (2)另一個做法是背景靜態圖 要動態的部分獨立拉出來<br>
                 接著每個小物件獨立CSS動畫<br>
                 但定位點就要認真測試 工程量小但跑版風險很高<br>
+                (2)定位做法是算比例 --用開發者模式去偷看
             </td>
             <td>
                 <a href="https://ameiro-home.com/">首頁BANNER動態(2作法)</a>
