--- a/6_MainPageRollerCoaster/6_MainPageRollerCoaster.html
+++ b/6_MainPageRollerCoaster/6_MainPageRollerCoaster.html
@@ -35,6 +35,16 @@
         <img id='bcgPic' src="./MainPageRollerCoaster.png" alt="">
         <svg id="RollerPath" data-name="圖層 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 607.2 436.8"><defs><style>.cls-1{fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:3px;}</style></defs><path class="cls-1" d="M38.11,0c1,45.18-27.69,253.91,236,290.87C418.14,311,516.28,300,607.2,276.19"/></svg>
         <img id='RollerCoaster' src="./Grocery_Cart.png" alt="">
+
+        <svg id="TestPath" width="1000px" height="800px">
+            <ellipse cx="320" cy="520" 
+            rx="100" ry="200" 
+            style="stroke: blue; 
+            stroke-width: 5px; 
+            fill:none"></ellipse>
+        </svg>
+
+        
     </div>
 
     <script>
