--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <a href="https://codepen.io/gxash/pen/YqmxWg">Codepen範例</a><br>
                 <a href="./2_WelcomeAnimation/2_WelcomeAnimation.html">手刻純CSS背景動畫-1</a><br>
                 <a href="./2_WelcomeAnimation/2_1_WelcomeAnimation.html">手刻純CSS背景動畫-2</a><br>
+                <a href="./2_WelcomeAnimation/2_2_WelcomeAnimation.html">GSAP背景動畫-2</a><br>
             </td>
         </tr>
         <tr>
